--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "vite-plugin-compress": "^2.1.1",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
