--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "particles-bg": "^2.5.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
