--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "emoji-picker-react": "^4.12.0",
     "particles-bg": "^2.5.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
